municipal_finance/static/stylesheets/scorecard.scss
/* ... */
//== Headings
h1 {
  margin-bottom: 20px;
}
.title {
  color: $brand-secondary;
}

//== Links
a {
  text-decoration: underline;
}

//== Columns
//
.column-full {
  width: 100%;
  margin: 0;
}
.column-half {
  width: 50%;
  margin: 0;
}

//== Map
//
#cover-map {
  position: relative;
  margin: 0px;
  height: auto;
  border-bottom: solid 1px $gray-dark;
}
#slippy-map {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

//== Header
//
#page-header-title {
  padding-top: 0.5em;
  padding-bottom: 0.5em;

  .header-buttons {
    float: right;
  }
  .fa-twitter {
    margin-right: 5px;
  }
  .title img {
    margin-right: 3px;
    vertical-align: bottom;
    height: 25px;
  }

  a {
    color: $white;
  }

  a.title {
    font-size: $font-size-h2;
  }
}

#menu {
  float: right;
  margin: .2em 0 0 5px;
  padding: 0;
}

#menu input {
  font-size: .83em;
  border: 0;
  margin-left: 0;
  padding: 2px 6px 0;
  height: 2em;
  line-height: 2em;
  border-radius: 4px;
}

#menu input,
#menu .tt-dropdown-menu {
  width: 240px;
}

#menu-toggle {
    float: right;
    font-size: 18px;
    margin-top: 2px;
    color: $white;
    line-height: 1;
    padding: .25em .33em .2em;
    background-color: $brand-primary;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    cursor: pointer;
    display: none;
}
#menu-toggle.fa:before {
    cursor: pointer;
}

//== Header box
//
#cover-profile {
  position: relative;

  article {
    margin-top: 3em;
    margin-bottom: 3em;
    border: solid $black 1px;
    border-radius: 0;
    padding: 0;
    line-height: 1;
    color: $gray-darker;
    background-color: $white;
  }

  .caption {
    margin-top: 0.25em;
    margin-bottom: 0.25em;
  }

  h1.title {
    font-size: 2.5em;
    margin: 0px;
  }

  #header-box {
    padding: 5px 10px 10px 10px;
    border-bottom: dotted 1px $gray-light;
    margin-bottom: 10px;
  }

  #header-box .title {
    margin: 0;
  }

  #header-box .caption {
    font-size: 14px;
  }

  .stat {
    color: $gray-darker;
    font-weight: bold;
  }

  .stat-primary {
    width: 30%;
    float: left;
    margin: 0 0 10px 0;
    text-align: center;
    padding: 0 5px;
    .name {
      display: block;
      text-transform: uppercase;
    }
    .value {
      font-size: 24px;
    }
  }
  .stat-secondary {
    width: 70%;
    float: left;
    margin-bottom: 6px;
    padding: 0 5px;
    .name {
      font-weight: normal;
    }
  }

}

@media only screen and (max-width: 768px) {
  #cover-map #slippy-map {
    height: 200px;
  }
  #cover-profile {
    margin: 200px 1em 0;
    text-align: center;
  }
  #cover-profile article {
    background-color: inherit;
    border: none;
    width: 100%;
    padding: 1em .25em;
    margin-top: 0;
    margin-bottom: 0;
  }
  #cover-profile #header-box {
    padding-top: 0;
  }
  #cover-profile .stat-primary .name {
    display: inline;
    text-transform: none;
    font-weight: normal;
  }
  #cover-profile .stat-primary .value {
    font-size: $font-size-base;
  }
  #cover-profile .stat-primary {
    font-size: inherit;
  }
  #cover-profile .stat-primary, #cover-profile .stat-secondary {
    float: none;
    display: inline;
    margin: 5px;
    padding: 5px;
    font-size: $font-size-base;
  }
}

@media only screen and (max-width: 480px) {
  #cover-profile .stat-primary, #cover-profile .stat-secondary {
    float: none;
    display: block;
    width: auto;
    padding: 0;
  }
}

//= Page header
#page-header {
  background: $gray-dark;
  border-bottom: solid 1px $gray-dark;
}

@media only screen and (max-width: 640px) {
  #menu-toggle {
    display: block;
  }
  #menu {
    float: none;
    display: block;
    padding: 1em 0 .67em;
    display: none;
  }
  #menu input {
    margin-left: 0;
  }
  #menu input,
  #menu .tt-dropdown-menu {
    width: 100%;
  }
}

//= Page nav
//
.page-nav-container {
  width: 100%;
  background-color: $brand-secondary;
  max-height: 100px;
  line-height: 1;
  transition: all 0.5s ease;
  .page-nav-info {
    max-height: 0;
    overflow: hidden;
    transition: all 0.5s ease;
  }
  .page-nav-info .muni-name, .page-nav-info .muni-population {
    padding-top: 5px;
  }
  .page-nav-info .muni-name {
    display: inline-block;
    color: $white;
    font-size: 22px;
    font-weight: 900;
    margin-right: 5px;
    opacity: 0;
    transition: all 1s ease;
    transition-delay: 0.3s;
  }
  .page-nav-info .muni-population {
    display: inline-block;
    font-size: $font-size-h6;
    font-weight: 700;
    text-transform: uppercase;
    color: rgba(0,0,0,0.5);
    opacity: 0;
    transition: all 1s ease;
    transition-delay: 0.3s;
  }
  #page-nav a {
    color: rgba(255,255,255,0.5);
    font-size: 12px;
    font-weight: 900;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 1px;
    border-radius: 0;
    padding: 8px 20px;
  }
  #page-nav a:hover, #page-nav a:active, #page-nav a:visited, #page-nav a:focus {
    background: transparent;
  }
  #page-nav a:hover {
    color: $white;
  }
  #page-nav li.active {
    border-bottom: solid 3px $brand-primary;
  }
  #page-nav li.active a {
    background: transparent;
    color: $white;
  }
  #page-nav li.active a .nav-text {
    text-shadow: 0 0 1px rgba(255,255,255,0.5);
  }
  #page-nav .icon {
    font-size: 28px;
  }
}

.page-nav-container.affix {
  z-index: 100;
  position: fixed;
  top: 0;
  width: 100%;
}

.page-nav-wrapper {
  transition: all 0.5s ease;
  height: 68px;
}

.page-nav-wrapper.expanded {
  height: 120px;
  .page-nav-info {
    max-height: 50px;
  }
  .page-nav-info .muni-name, .page-nav-info .muni-population {
    opacity: 1;
  }
  .
  .page-nav-container {
    max-height: 140px;
  }
}
/* ... */

